--- a/frontend/app/src/main/res/values/splash.xml
+++ b/frontend/app/src/main/res/values/splash.xml
@@ -2,7 +2,7 @@
 <resources>
     <style name="Theme.SplashScreen.ComposeSplash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/green</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/plant_tracker</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo</item>
         <item name="postSplashScreenTheme">@style/Theme.PlantTrackerApp</item>
     </style>
 </resources>
